--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.15.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.2",
