--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.1",
     "antd": "^5.15.0",
+    "jotai": "^2.7.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "qrcode.react": "^3.1.0",
